--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ egui = "0.21.0"
 egui_extras = { version = "0.21.0", features = ["image"] }
 # ffmpeg-sidecar = "0.2.0"
 ffmpeg-sidecar = { git = "https://github.com/nathanbabcock/ffmpeg-sidecar" }
-ffprobe = "0.3.3"
+ffprobe = { git = "https://github.com/avsaase/ffprobe-rs/", branch = "suppress-console-windows"}
 image = "0.24.5"
 indoc = "2.0.0"
 itertools = "0.10.5"
