--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
-name = "walksnail-osd-tool"
+name = "walksnail-osd-overlay-tool"
 version = "0.1.0"
 edition = "2021"
+description = "Cross-platform tool for overlaying the Walksnail Avatar Goggle and VRX OSD recording on top of the video recording."
+authors = ["Alexander van Saase <avsaase <at> gmail.com>"]
+keywords = ["Walksnail Avatar", "FPV", "Video"]
+repository = "https://github.com/avsaase/walksnail-osd-tool"
+readme = "README.md"
+license = "GPL-3.0"
 
 [dependencies]
 eframe = "0.21.3"
