fix: store logs in plaform-specific data folder

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "walksnail-osd-overlay-tool"
 version = "0.1.0"
 edition = "2021"
 description = "Cross-platform tool for overlaying the Walksnail Avatar Goggle and VRX OSD recording on top of the video recording."
-authors = ["Alexander van Saase <avsaase <at> gmail.com>"]
+authors = ["Alexander van Saase"]
 keywords = ["Walksnail Avatar", "FPV", "Video"]
 repository = "https://github.com/avsaase/walksnail-osd-tool"
 readme = "README.md"
@@ -11,6 +11,7 @@ license = "GPL-3.0"
 
 [dependencies]
 derivative = "2.2.0"
+directories = "4.0.1"
 eframe = "0.21.3"
 egui = "0.21.0"
 egui_extras = { version = "0.21.0", features = ["image"] }
