ci: fix macos build check

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -50,7 +50,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [windows-latest, macos-lastes]
+        target: [windows-latest, macos-latest]
     runs-on: ${{ matrix.target }}
     steps:
       - uses: actions/checkout@v2
