--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,28 +3,6 @@ name: Continuous integration
 on: [push, pull_request]
 
 jobs:
-  check:
-    name: Check
-    runs-on: windows-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          profile: minimal
-          override: true
-
-      - name: Cache dependencies
-        uses: Swatinem/rust-cache@v2
-
-      - name: Cargo check
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-
   format-check:
     name: Format check
     runs-on: windows-latest
@@ -78,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [windows-latest, macos-latest, ubuntu-latest]
+        target: [windows-latest, macos-latest]
     runs-on: ${{ matrix.target }}
     steps:
       - name: Checkout code
