--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [windows-latest, macos-latest]
+        target: [windows-latest, macos-latest, ubuntu-latest]
     runs-on: ${{ matrix.target }}
     steps:
       - name: Checkout code
@@ -68,6 +68,14 @@ jobs:
           toolchain: stable
           profile: minimal
           override: true
+
+      - name: Install packages (Linux)
+        if: ${{ matrix.target == 'ubuntu-latest' }}
+        uses: rerun-io/cache-apt-pkgs-action@59534850182063abf1b2c11bb3686722a12a8397
+        with:
+          packages: libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev libxkbcommon-dev libssl-dev libgtk-3-dev # libgtk-3-dev is used by rfd
+          version: 1.0
+          execute_install_scripts: true
 
       - name: Cache dependencies
         uses: Swatinem/rust-cache@v2
