--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,7 +36,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
 
       - name: Install cargo-wix
-        if: ${{ matrix.targets.os == 'windows-latest'}}
+        if: ${{ matrix.targets.os == 'windows-latest' && steps.extcache.outputs.cache-hit != true }}
         run: |
           cargo install cargo-wix
 
@@ -44,7 +44,7 @@ jobs:
         run: cargo build --release
 
       - name: Download ffmpeg
-        if: ${{ matrix.targets.os == 'windows-latest'}} #  && steps.extcache.outputs.cache-hit != true
+        if: ${{ matrix.targets.os == 'windows-latest' && steps.extcache.outputs.cache-hit != true }}
         run: |
           mkdir ${{ github.workspace }}/target/release/ffmpeg
           cd ${{ github.workspace }}/target/release/ffmpeg
