--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "walksnail-osd-overlay-tool"
+name = "walksnail-osd-tool"
 version = "0.1.0"
 edition = "2021"
 description = "Cross-platform tool for overlaying the Walksnail Avatar Goggle and VRX OSD recording on top of the video recording."
@@ -18,7 +18,6 @@ egui_extras = { version = "0.21.0", features = ["image"] }
 ffmpeg-sidecar = "0.2.1"
 ffprobe = { git = "https://github.com/avsaase/ffprobe-rs/", branch = "suppress-console-windows"}
 image = "0.24.5"
-indoc = "2.0.0"
 itertools = "0.10.5"
 rayon = "1.6.1"
 rfd = "0.11.1"
