--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,16 +35,12 @@ jobs:
         id: extcache
         uses: Swatinem/rust-cache@v2
 
-      - name: Install cargo-binstall
+      - name: Install cargo-wix
         if: ${{ matrix.targets.os == 'windows-latest' }}
         uses: taiki-e/install-action@v2
         with:
           tool: cargo-binstall
-
-      - name: Install cargo-wix
-        if: ${{ matrix.targets.os == 'windows-latest' }}
-        run: |
-          cargo binstall cargo-wix --no-confirm
+          run: cargo binstall cargo-wix --no-confirm
 
       - name: Build
         run: cargo build --release
