--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,7 +49,7 @@ jobs:
         run: cargo build --release
 
       - name: Download ffmpeg
-        if: ${{ matrix.targets.os == 'windows-latest' && steps.extcache.outputs.cache-hit != 'true' }}
+        if: ${{ matrix.targets.os == 'windows-latest' }}
         run: |
           mkdir ${{ github.workspace }}/target/release/ffmpeg
           cd ${{ github.workspace }}/target/release/ffmpeg
