--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,6 +34,8 @@ jobs:
       - name: Cache dependencies
         id: extcache
         uses: Swatinem/rust-cache@v2
+        with:
+          cache-directories: "${{ github.workspace }}/ext/"
 
       - name: Install cargo-binstall
         if: ${{ matrix.targets.os == 'windows-latest' }}
@@ -51,8 +53,8 @@ jobs:
       - name: Download ffmpeg
         if: ${{ matrix.targets.os == 'windows-latest' && steps.extcache.outputs.cache-hit != 'true' }}
         run: |
-          mkdir ${{ github.workspace }}/target/release/ffmpeg
-          cd ${{ github.workspace }}/target/release/ffmpeg
+          mkdir ${{ github.workspace }}/ext/ffmpeg
+          cd ${{ github.workspace }}}/ext/ffmpeg
           curl -L ${{ matrix.targets.ffmpeg_url }} -o ffmpeg.zip
           7z e ffmpeg.zip
 
