--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,7 +29,6 @@ jobs:
           toolchain: stable
           profile: minimal
           override: true
-          components: rustfmt
 
       - name: Cache dependencies
         id: extcache
@@ -54,15 +53,14 @@ jobs:
         if: ${{ matrix.targets.os == 'windows-latest' && steps.extcache.outputs.cache-hit != 'true' }}
         run: |
           mkdir ${{ github.workspace }}/ext/ffmpeg
-          cd ${{ github.workspace }}}/ext/ffmpeg
+          cd ${{ github.workspace }}/ext/ffmpeg
           curl -L ${{ matrix.targets.ffmpeg_url }} -o ffmpeg.zip
           7z e ffmpeg.zip
 
       - name: Create Windows installer
         if: ${{ matrix.targets.os == 'windows-latest'}}
         continue-on-error: true
-        run: |
-          cargo wix --include resources\release\wix\main.wxs --nocapture --no-build
+        run: cargo wix --include resources\release\wix\main.wxs --nocapture --no-build
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
