--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,6 +2,8 @@ name: Release
 
 on:
   push:
+    tags:
+      - v[0-9]+.*
 
 jobs:
   build:
@@ -44,7 +46,7 @@ jobs:
 
       - name: Install cargo-wix
         if: ${{ matrix.targets.os == 'windows-latest' }}
-        run: cargo binstall cargo-wix --no-confirm
+        run: cargo binstall cargo-wix --no-confirm --force
 
       - name: Build
         run: cargo build --release
@@ -67,3 +69,22 @@ jobs:
         with:
           name: ${{ matrix.targets.name }}
           path: ${{ github.workspace }}/target/wix/walksnail-osd-tool-*.msi
+
+  release:
+    name: Release
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: windows64
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        # if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            ./*
+          draft: true
+          body: "Full changelog: https://github.com/avsaase/walksnail-osd-tool/blob/master/CHANGELOG.md"
