--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -55,7 +55,8 @@ jobs:
         id: extcache
         uses: Swatinem/rust-cache@v2
         with:
-          cache-directories: "${{ github.workspace }}/ext/"
+          cache-directories: ${{ github.workspace }}/ext/
+          prefix-key: "v1"
 
       - name: Install cargo-binstall
         uses: taiki-e/install-action@v2
