--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -80,14 +80,17 @@ jobs:
         run: cargo build --release --target ${{ matrix.targets.target }} --features macos-app-bundle
 
       - name: Extract ffmpeg
+        if: ${{ matrix.targets.name == 'windows64'}}
         run: |
           cd ${{ github.workspace }}/ext/ffmpeg/${{ matrix.targets.name }}
           7z x ${{ matrix.targets.ffmpeg_filename }} -aoa
-          if ${{ matrix.targets.name != 'windows64'}}
-          then
-            7z x ${{ matrix.targets.ffprobe_filename }} -aoa
-          fi
-        shell: bash
+
+      - name: Extract ffmpeg
+        if: ${{ matrix.targets.name == 'macos-intel' || matrix.targets.name == 'macos-arm' }}
+        run: |
+          cd ${{ github.workspace }}/ext/ffmpeg/${{ matrix.targets.name }}
+          7z x ${{ matrix.targets.ffmpeg_filename }} -aoa
+          7z x ${{ matrix.targets.ffprobe_filename }} -aoa
 
       - name: Create Windows installer
         if: ${{ matrix.targets.name == 'windows64'}}
