Change icon and add to readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,14 +43,14 @@ windows-installer = []
 name = "Walksnail OSD Tool"
 identifier = "org.avsaase.walksnail-osd-tool"
 icon = [
-    "_deploy/icons/16x16.png",
-    "_deploy/icons/32x32.png",
-    "_deploy/icons/32x32@2x.png",
-    "_deploy/icons/64x64@2x.png",
-    "_deploy/icons/128x128.png",
-    "_deploy/icons/256x256.png",
-    "_deploy/icons/256x256@2x.png",
-    "_deploy/icons/512x512.png",
-    "_deploy/icons/512x512@2x.png",
-    "_deploy/icons/1024x1024@2x.png",
+    "resources/icons/16x16.png",
+    "resources/icons/16x16@2x.png",
+    "resources/icons/32x32.png",
+    "resources/icons/32x32@2x.png",
+    "resources/icons/128x128.png",
+    "resources/icons/128x128@2x.png",
+    "resources/icons/256x256.png",
+    "resources/icons/256x256@2x.png",
+    "resources/icons/512x512.png",
+    "resourcescd /icons/512x512@2x.png",
 ]
