--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -125,7 +125,7 @@ jobs:
           path: ${{ github.workspace }}/_deploy/*.*
 
   release:
-    name: Create release
+    name: Create GitHub release
     if: startsWith(github.ref, 'refs/tags/')
     needs: build
     runs-on: ubuntu-latest
