--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "walksnail-osd-tool"
-version = "0.1.0"
+version = "0.1.0-beta1"
 edition = "2021"
 description = "Cross-platform tool for overlaying the Walksnail Avatar Goggle and VRX OSD recording on top of the video recording."
 authors = ["Alexander van Saase"]
@@ -31,8 +31,8 @@ tracing-subscriber = "0.3.16"
 # egui_extras = { path = "../egui/crates/egui_extras", features = ["image"] }
 
 [build-dependencies]
-built = { version = "0.6.0", features = ["git2"] }
 image = "0.24.5"
+vergen = "7.5.1"
 
 [features]
 macos-app-bundle = []
