--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,12 @@ egui_extras = { version = "0.21.0", features = ["image"] }
 ffmpeg-sidecar = "0.3.2"
 ffprobe = { git = "https://github.com/avsaase/ffprobe-rs/", branch = "suppress-console-windows" }
 image = "0.24.5"
+imageproc = "0.23.0"
+parse-display = "0.8.0"
 rayon = "1.6.1"
 rfd = "0.11.1"
+rusttype = "0.9.3"
+srtparse = "0.2.0"
 thiserror = "1.0.38"
 tracing = "0.1.37"
 tracing-appender = { version = "0.2.2", default-features = false }
@@ -41,6 +45,10 @@ windows-installer = []
 
 [profile.dev]
 opt-level = 3
+
+[profile.release]
+lto = "fat"
+codegen-units = 1
 
 [package.metadata.bundle]
 name = "Walksnail OSD Tool"
