--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 license = "GPL-3.0"
 
 [dependencies]
+confy = "0.5.1"
 crossbeam-channel = "0.5.7"
 derivative = "2.2.0"
 directories = "4.0.1"
@@ -24,6 +25,7 @@ parse-display = "0.8.0"
 rayon = "1.6.1"
 rfd = "0.11.1"
 rusttype = "0.9.3"
+serde = { version = "1.0.159", features = ["derive"] }
 srtparse = "0.2.0"
 thiserror = "1.0.38"
 tracing = "0.1.37"
