--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,12 +19,15 @@ egui = "0.21.0"
 egui_extras = { version = "0.21.0", features = ["image"] }
 ffmpeg-sidecar = "0.3.2"
 ffprobe = { git = "https://github.com/avsaase/ffprobe-rs/", branch = "suppress-console-windows" }
+github_release_check = "0.2.1"
 image = "0.24.5"
 imageproc = "0.23.0"
 parse-display = "0.8.0"
+poll-promise = "0.2.0"
 rayon = "1.6.1"
 rfd = "0.11.1"
 rusttype = "0.9.3"
+semver = "1.0.17"
 serde = { version = "1.0.159", features = ["derive"] }
 srtparse = "0.2.0"
 thiserror = "1.0.38"
