--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "walksnail-osd-tool"
 version = "0.1.0"
 edition = "2021"
-description = "Cross-platform tool for overlaying the Walksnail Avatar Goggle and VRX OSD recording on top of the video recording."
+description = "Cross-platform tool for rendering the flight controller OSD and SRT data from the Walksnail Avatar HD FPV system on top of the goggle or VRX recording."
 authors = ["Alexander van Saase"]
 keywords = ["Walksnail Avatar", "FPV", "Video"]
 repository = "https://github.com/avsaase/walksnail-osd-tool"
