--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -18,12 +18,12 @@ path = "../backend"
 [dependencies]
 crossbeam-channel = "0.5.8"
 derivative = "2.2.0"
-eframe = "0.21.3"
-egui = "0.21.0"
-egui_extras = { version = "0.21.0", features = ["image"] }
+eframe = "0.22.0"
+egui = "0.22.0"
+egui_extras = { version = "0.22.0", features = ["image"] }
 github_release_check = "0.2.1"
 image = "0.24.6"
-poll-promise = "0.2.0"
+poll-promise = { git = "https://github.com/EmbarkStudios/poll-promise", rev = "b493586107b0e508860aa2e9d18049fd8cd9d13f" }
 rfd = "0.11.1"
 rusttype = "0.9.3"
 tracing = "0.1.37"
